--- a/src/index.html
+++ b/src/index.html
@@ -11,4 +11,14 @@
   <body>
     <app-root></app-root>
   </body>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-298LKLF45E"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-298LKLF45E');
+  </script>
 </html>
