update seo and accesibility

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
     <title>hunt-the-bishomalo</title>
@@ -7,7 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <meta name="description" content="Hunt the Wumpus: un juego de estrategia retro reinventado. 
+      Explora laberintos, esquiva peligros y atrapa al escurridizo Wumpus antes de que te atrape a ti. ¿Estás listo para el desafío?"
+    >
     
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
+
+
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-298LKLF45E"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -16,10 +25,4 @@
 
       gtag('config', 'G-298LKLF45E');
     </script>
-  </head>
-  <body>
-    <app-root></app-root>
-  </body>
-
-
 </html>
