--- a/src/index.html
+++ b/src/index.html
@@ -6,23 +6,28 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <meta name="description" content="Hunt the Wumpus: un juego de estrategia retro reinventado. 
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
+    <meta
+      name="description"
+      content="Hunt the Wumpus: un juego de estrategia retro reinventado. 
       Explora laberintos, esquiva peligros y atrapa al escurridizo Wumpus antes de que te atrape a ti. ¿Estás listo para el desafío?"
-    >
-    
+    />
   </head>
   <body>
     <app-root></app-root>
   </body>
 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-298LKLF45E"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-298LKLF45E"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-298LKLF45E');
-    </script>
+    gtag('config', 'G-298LKLF45E');
+  </script>
 </html>
