--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,14 @@
       content="Hunt the Wumpus: un juego de estrategia retro reinventado. 
       Explora laberintos, esquiva peligros y atrapa al escurridizo Wumpus antes de que te atrape a ti. ¿Estás listo para el desafío?"
     />
+
+    <!-- Open Graph para Facebook, LinkedIn y más -->
+    <meta property="og:title" content="Hunt the Bishomalo - Juego de estrategia retro" />
+    <meta property="og:description" content="Explora laberintos, esquiva peligros y atrapa al escurridizo Wumpus antes de que te atrape a ti." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://hunt-the-bishomalo.vercel.app/" />
+    <meta property="og:image" content="https://hunt-the-bishomalo.vercel.app/screenshot.png" />
+
   </head>
   <body>
     <app-root></app-root>
