feat(seo): add robots sitemap and scp

--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,10 @@
     <meta property="og:url" content="https://hunt-the-bishomalo.vercel.app/" />
     <meta property="og:image" content="https://hunt-the-bishomalo.vercel.app/screenshot.png" />
 
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' https://fonts.googleapis.com 'unsafe-inline'; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:;">
-
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; script-src 'self'; style-src 'self' https://fonts.googleapis.com 'unsafe-inline'; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:;"
+    />
   </head>
   <body>
     <app-root></app-root>
