--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,10 @@
     <meta property="og:url" content="https://hunt-the-bishomalo.vercel.app/" />
     <meta property="og:image" content="https://hunt-the-bishomalo.vercel.app/screenshot.png" />
 
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://www.googletagmanager.com https://www.google-analytics.com;">
-
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; script-src 'self' https://www.googletagmanager.com https://www.google-analytics.com;"
+    />
   </head>
   <body>
     <app-root></app-root>
