fix(pettrier): fix index

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,8 @@
     <meta property="og:url" content="https://hunt-the-bishomalo.vercel.app/" />
     <meta property="og:image" content="https://hunt-the-bishomalo.vercel.app/screenshot.png" />
 
-    <meta http-equiv="Content-Security-Policy"
+    <meta
+      http-equiv="Content-Security-Policy"
       content="
         default-src 'self';
         script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://www.google-analytics.com;
@@ -34,7 +35,8 @@
         font-src https://fonts.gstatic.com;
         img-src 'self' data: https:;
         connect-src 'self' https://www.google-analytics.com;
-      ">
+      "
+    />
   </head>
   <body>
     <app-root></app-root>
